--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -12,12 +12,14 @@
   <title>Webtech</title>
 </head>
 <body>
-  <h1>Welcome to Webtech</h1>
-  <p>Please upload a csv file</p>
-  <form id="inputForm" enctype="multipart/form-data">
-    <input type="file" name="csv_data" accept=".csv">
-  </form>
-  <button onclick="getData()">Submit</button>
-  <p id="sizeP" class="hidden">Your file was <strong id="sizeSpan"></strong> bytes!</p>
+  <section class="small">
+    <h1>Welcome to Webtech</h1>
+    <p>Please upload a csv file</p>
+    <form id="inputForm" enctype="multipart/form-data">
+      <input type="file" name="csv_data" accept=".csv">
+    </form>
+    <button onclick="getData()">Submit</button>
+    <p id="sizeP" class="hidden">Your file was <strong id="sizeSpan"></strong> bytes!</p>
+  </section>
 </body>
 </html>
