--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="{% static 'build/css/global.css' %}">
+  <link rel="stylesheet" href="{% static 'build/css/global.css' %}"> <!-- COMPILED FILE -> DO NOT CHANGE THIS FILE BY HAND -->
   <script src="{% static 'src/js/ajax.js'%}"></script>
   <title>Webtech</title>
 </head>
