--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -8,18 +8,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="{% static 'build/css/global.css' %}"> <!-- COMPILED FILE -> DO NOT CHANGE THIS FILE BY HAND -->
-  <script src="{% static 'src/js/ajax.js'%}"></script>
+  <script defer src="{% static 'src/js/ajax.js'%}"></script>
+  <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.2.min.js"></script>
+  <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-2.3.2.min.js"></script>
+  <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.3.2.min.js"></script>
+  <script src="https://cdn.bokeh.org/bokeh/release/bokeh-api-2.3.2.min.js"></script>
   <title>Webtech</title>
 </head>
 <body>
+  <h1>Welcome to Webtech</h1>
   <section class="small">
-    <h1>Welcome to Webtech</h1>
     <p>Please upload a csv file</p>
     <form id="inputForm" enctype="multipart/form-data">
       <input type="file" name="csv_data" accept=".csv">
     </form>
-    <button onclick="getData()">Submit</button>
+    <button onclick="getData()">Show Graph</button>
     <p id="sizeP" class="hidden">Your file was <strong id="sizeSpan"></strong> bytes!</p>
   </section>
+  <div id="BaseDataPlot" class="hidden"></div>
 </body>
 </html>
