should be ready for grading v0

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -22,7 +22,8 @@
     <form id="inputForm" enctype="multipart/form-data">
       <input type="file" name="csv_data" accept=".csv">
     </form>
-    <button onclick="getData()">Show Graph</button>
+    <button onclick="getFullSizeGraph()">Show Graph</button>
+    <!-- <button onclick="getChordDiagram()">Show Chord Diagram</button> -->
     <p id="sizeP" class="hidden">Your file was <strong id="sizeSpan"></strong> bytes!</p>
   </section>
   <div id="BaseDataPlot" class="hidden"></div>
