--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -45,10 +45,26 @@
     <p class="error hidden"></p>
     <p id="sizeP" class="hidden">Your file was <strong id="sizeSpan"></strong> bytes!</p>
   </section>
-  <div id="loading" class="loading hidden">
-    <div class="inner"></div>
+  <div class="mainRow">
+    <div class="left">
+      <div id="graph_loading" class="loading hidden">
+        <div class="inner"></div>
+      </div>
+      <div id="BaseDataPlot" class="hidden"></div>
+    </div>
+    <div class="right hidden">
+      <div id="individual_loading" class="loading hidden">
+        <div class="inner"></div>
+      </div>
+      <p id="meta">
+        <span class="id"></span>
+        <span class="email"></span>
+        <span class="job_title"></span>
+      </p>
+      <table id="individualInfo" class="hidden">
+      </table>
+    </div>
   </div>
-  <div id="BaseDataPlot" class="hidden"></div>
 </body>
 
 </html>
