--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
   <!-- COMPILED FILE -> DO NOT CHANGE THIS FILE BY HAND -->
   <script defer src="{% static 'src/js/ajax.js'%}"></script>
   <script defer src="{% static 'src/js/doubleSlider.js'%}"></script>
+  <script defer src="{% static 'src/js/fullSizeGraph.js'%}"></script>
+  <script defer src="{% static 'src/js/chordDiagram.js'%}"></script>
+  <script defer src="{% static 'src/js/individualInfo.js'%}"></script>
   <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.2.min.js"></script>
   <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-2.3.2.min.js"></script>
   <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.3.2.min.js"></script>
