--- a/static/src/css/global.scss
+++ b/static/src/css/global.scss
@@ -4,6 +4,10 @@ body {
   color: #fff;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 #initialOverlay {
   width: 100%;
   height: 100vh;
@@ -169,4 +173,49 @@ p.error {
 }
 table {
   width: 100%;
+}
+
+.email_array > * {
+  display: inline-block;
+  height: 1rem;
+  position: relative;
+  div {
+    background-color: white;
+    height: 100%;
+  }
+  p {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    color: rgb(25, 16, 61);
+    background-color: white;
+    margin: 0;
+    z-index: 1;
+    display: none;
+    cursor: pointer;
+    width: max-content;
+    box-shadow: 0 0 0.3rem rgba(0,0,0,0.25);
+    padding: 0.1rem 0.3rem;
+    &::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      bottom: 100%;
+      width: 1rem;
+      height: 1rem;
+      border: 0.5rem solid transparent;
+      border-bottom-color: white;
+      box-sizing: border-box;
+    }
+  }
+  &:hover p {
+    display: block;
+  }
+}
+.email_array.borders div {
+  box-shadow: -1px 0 0 0 rgb(25, 16, 61);
+}
+
+tr.paddingBottom td {
+  padding-bottom: 1rem;
 }
