--- a/static/src/css/global.scss
+++ b/static/src/css/global.scss
@@ -201,15 +201,20 @@ table {
       position: absolute;
       right: 0;
       bottom: 100%;
-      width: 1rem;
-      height: 1rem;
-      border: 0.5rem solid transparent;
+      width: 0.5rem;
+      height: 0.5rem;
+      border: 0.25rem solid transparent;
       border-bottom-color: white;
+      border-right-color: white;
       box-sizing: border-box;
+      pointer-events: none;
     }
   }
-  &:hover p {
-    display: block;
+  &:hover {
+    box-shadow: 0 -2px 0 0 #afa;
+    p {
+      display: block;
+    }
   }
 }
 .email_array.borders div {
