--- a/templates/index.html
+++ b/templates/index.html
@@ -55,15 +55,15 @@
       <p class="mb-0">Filter by sentiment</p>
       <div class="sentimentWrap checkboxes">
         <label for="sentiment-negative">
-          <input type="checkbox" id="sentiment-negative" checked value="negative">
+          <input type="checkbox" id="sentiment-negative" checked value="negative" autocomplete="off">
           <p>negative</p>
         </label>
         <label for="sentiment-neutral">
-          <input type="checkbox" id="sentiment-neutral" checked value="neutral">
+          <input type="checkbox" id="sentiment-neutral" checked value="neutral" autocomplete="off">
           <p>neutral</p>
         </label>
         <label for="sentiment-positive">
-          <input type="checkbox" id="sentiment-positive" checked value="positive">
+          <input type="checkbox" id="sentiment-positive" checked value="positive" autocomplete="off">
           <p>positive</p>
         </label>
       </div>
