hide more while leading

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
       <p class="info">You can refresh the page at any time to upload a new dataset.</p>
     </div>
   </div>
-  <section class="small">
+  <section class="small filters hidden">
     <p class="mb-0">Filter by time span</p>
     <div class="doubleSlider">
       <div class="handWrap">
