--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,11 @@
         <div class="inner"></div>
       </div>
       <p id="meta">
+        <span class="text-right search_by_id">
+          <input type="number" class="node_id" autocomplete="off">
+          <button onclick="SearchById()">Find Info</button>
+        </span>
+        <br>
         <span class="id"></span>
         <span class="email"></span>
         <span class="job_title"></span>
