--- a/static/src/css/global.scss
+++ b/static/src/css/global.scss
@@ -270,3 +270,15 @@ iframe {
   width: 100%;
   border: none;
 }
+
+.search_by_id {
+  display: block;
+}
+
+.search_by_id * {
+  display: inline;
+}
+
+.search_by_id input {
+  width: 5rem;
+}
