coloured time filter by mean sentiment

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,8 @@
     <p class="mb-0">Filter by time span</p>
     <div class="doubleSlider">
       <div class="handWrap">
-        <div class="highlight"></div>
+        <div class="cover left"></div>
+        <div class="cover right"></div>
         <div class="leftHand hand"></div>
         <div class="rightHand hand"></div>
       </div>
