--- a/static/src/css/global.scss
+++ b/static/src/css/global.scss
@@ -79,7 +79,7 @@ section.small {
 .doubleSlider {
   padding: 1px 0 1rem 0;
   .handWrap {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgb(255, 255, 255);
     height: 0.25rem;
     margin: 1rem;
     position: relative;
@@ -107,13 +107,18 @@ section.small {
         right: -1rem;
       }
     }
-    .highlight {
+    .cover {
       position: absolute;
-      background-color: #fff;
+      background-color: rgba(25, 16, 61, 0.5);
       top: 0;
-      left: 0;
-      width: 100%;
       height: 100%;
+      width: 0;
+      &.left {
+        left: 0;
+      }
+      &.right {
+        right: 0;
+      }
     }
   }
   .inputWrap {
